--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-business",
-  "version": "2.1.2",
-  "description": "Gatsby Business Website Starter",
+  "name": "ieee",
+  "version": "0.5.0",
+  "description": "IEEE Web",
   "main": "index.js",
   "scripts": {
     "develop": "gatsby develop",
@@ -13,8 +13,8 @@
     "lint:fix": "eslint --ext js,jsx --ignore-path .gitignore . --fix",
     "clean": "rm -rf public/ .cache/"
   },
-  "repository": "https://github.com/v4iv/gatsby-starter-business",
-  "author": "Vaibhav Sharma <vaibhavsharmaatwork@gmail.com>",
+  "repository": "https://github.com/Live4Code/ieee",
+  "author": "Edward Tan <guofoo@gmail.com>",
   "license": "MIT",
   "private": false,
   "remarkConfig": {
