--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "bulma": "^0.7.5",
+    "emotion-theming": "^10.0.27",
     "formik": "^1.5.8",
     "gatsby": "^2.15.15",
     "gatsby-paginate": "^1.1.1",
+    "gatsby-plugin-chakra-ui": "^0.1.4",
     "gatsby-plugin-feed": "^2.3.12",
     "gatsby-plugin-google-tagmanager": "^2.1.9",
     "gatsby-plugin-manifest": "^2.2.16",
